# monopod-svn

trunk/monopod/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure.in  doap.rdf
trunk/monopod/Monopod/: AddChannelWindow.cs  AddWindow.glade  AssemblyInfo.cs.in  Cast.cs  Channel.cs  ChannelWindow.cs  Defines.cs.in  DeleteFiles.glade  Dialogs.cs  ErrorDialog.glade  IPod.cs  IPodChoose.cs  IPodWindow.glade  ItemList.cs  Main.cs  Makefile.am  Monopod.exe.config  MyWindow.cs  NewChannel.glade  SearchEntry.cs  SqlUtil.cs  Store.cs  StringUtils.cs  TrayLib.cs  WebUtil.cs  monopod.in
trunk/monopod/data/: Makefile.am  monopod.desktop.in
trunk/monopod/entagged-sharp/: ChangeLog  Makefile.am  README  configure.ac  entagged-sharp.pc.in  entagged-sharp.snk
trunk/monopod/entagged-sharp/src/: AssemblyInfo.cs  AssemblyInfo.cs.in  AudioFile.cs  AudioFileIO.cs  EncodingInfo.cs  Makefile.am  Makefile.in  Tag.cs
trunk/monopod/entagged-sharp/src/Ape/: ApeTag.cs  MonkeyFileReader.cs
trunk/monopod/entagged-sharp/src/Ape/Util/: ApeTagBinaryField.cs  ApeTagField.cs  ApeTagReader.cs  ApeTagTextField.cs  MonkeyDescriptor.cs  MonkeyHeader.cs  MonkeyInfoReader.cs  WavFormatHeader.cs  WavRIFFHeader.cs
trunk/monopod/entagged-sharp/src/Exceptions/: CannotReadException.cs
trunk/monopod/entagged-sharp/src/Flac/: FlacFileReader.cs
trunk/monopod/entagged-sharp/src/Flac/Util/: FlacInfoReader.cs  FlacTagReader.cs  MetadataBlockDataStreamInfo.cs  MetadataBlockHeader.cs
trunk/monopod/entagged-sharp/src/Mp3/: Id3Tag.cs  Mp3FileReader.cs
trunk/monopod/entagged-sharp/src/Mp3/Util/: Id3v1TagReader.cs  Id3v23TagReader.cs  Id3v2TagReader.cs  Id3v2TagSynchronizer.cs  LameMPEGFrame.cs  MPEGFrame.cs  Mp3InfoReader.cs  XingMPEGFrame.cs
trunk/monopod/entagged-sharp/src/Mp3/Util/Id3frames/: ApicId3Frame.cs  CommId3Frame.cs  GenericId3Frame.cs  Id3Frame.cs  TextId3Frame.cs
trunk/monopod/entagged-sharp/src/Mpc/: MpcFileReader.cs
trunk/monopod/entagged-sharp/src/Mpc/Util/: MpcHeader.cs  MpcInfoReader.cs
trunk/monopod/entagged-sharp/src/Ogg/: OggFileReader.cs  OggTag.cs
trunk/monopod/entagged-sharp/src/Ogg/Util/: OggInfoReader.cs  OggPageHeader.cs  OggTagField.cs  OggTagReader.cs  VorbisCodecHeader.cs  VorbisTagReader.cs
trunk/monopod/entagged-sharp/src/Util/: AudioFileReader.cs  ByteBuffer.cs  TagField.cs  Utils.cs
trunk/monopod/po/: ChangeLog  POTFILES.in  nl.po  ru.po
