SUBDIRS = src
DISTCLEANFILES=config.guess config.sub configure install-sh missing depcomp Makefile.in mkinstalldirs ltmain.sh aclocal.m4 *.pidb *.bak

# NOT ALLOWING INSTALLATION RIGHT NOW
# http://www.mono-project.com/Guidelines:Application_Deployment
# 
#pkgconfigdir = $(libdir)/pkgconfig
#pkgconfig_DATA = entagged-sharp.pc

#install-data-hook:
#	cat ./INSTALL

EXTRA_DIST = entagged-sharp.pc.in entagged-sharp.snk

